# skills-i8n

./: .env.example  .gitignore  COMMANDS.md  LICENSE  README.md  pyproject.toml
example_skills/code-review/: SKILL.md
example_skills/pdf-processing/: SKILL.md
example_skills/readme-writer/: SKILL.md
skill_i18n/: cli.py  parser.py  repo.py  translator.py
skills_i8n/: cli.py
tests/: test_parser.py  test_translator.py
