[project]
name = "skills-i18n"
version = "0.1.0"
description = "🌐 i18n for AI Agent Skills — translate your SKILL.md repos to any language with Lingo.dev"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["i18n", "agent-skills", "lingo.dev", "localization", "ai-agents", "SKILL.md"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Localization",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
]

[project.scripts]
skill-i18n = "skill_i18n.cli:app"


[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
