[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skills-i8n"
version = "0.1.0"
description = "🌐 i8n for AI Agent Skills — translate your SKILL.md repos to any language with Lingo.dev"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["i8n", "agent-skills", "lingo.dev", "localization", "ai-agents", "SKILL.md"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Localization",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
]

[tool.setuptools]
packages = ["skills_i8n"]

[project.scripts]
skills-i8n = "skills_i8n.cli:app"
